<resources>
    <string name="app_name">Fortnightly</string>

    <string name="appbar_title">The Fortnightly</string>
    <string name="article_list_title">Articles</string>
    <string name="article_details_title">Article</string>
    <string name="generic_error">Something went wrong</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="could_not_refresh">Could not refresh: %s</string>
    <string name="no_results_found">No results found</string>
    <string name="could_not_load_search_results">Could not load search results: %s</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="article_details_transition_name">article_details_transition_name</string>
    <string name="article_transition_name">article_transition_name_%1$s</string>

    <!-- News category label -->
    <string name="category_sports_label">#Sport</string>
    <string name="category_breaking_news_label">#Latest</string>
    <string name="category_business_label">#Business</string>
    <string name="category_science_label">#Science</string>


    <string name="search_news_hint_label">Search for article</string>
    <string name="language_hint_label">Language</string>
    <string name="sort_by_hint_label">Sort By</string>
    <string name="start_date_hint_label">Start Date</string>
    <string name="end_date_hint_label">End Date</string>
    <string name="search_label">Search</string>
    <string name="open_in_browser_label">Open in browser</string>
    <string name="long_text_example">
        "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.""
    </string>

</resources>