<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.fortnightly.ui.details.ArticleDetailsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:transitionName="@string/article_details_transition_name">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back_24"
                app:navigationIconTint="@color/colorOnPrimary"
                android:theme="@style/Widget.Fortnightly.Toolbar"
                app:menu="@menu/details_menu">

                <TextView
                    android:id="@+id/text_view_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appbar_title"
                    android:textColor="@color/colorOnPrimary"
                    android:fontFamily="@font/old_london"
                    android:textSize="34sp"
                    android:gravity="center"
                    android:textAppearance="?attr/titleTextAppearance" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/image_view_article"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:imgUrl="@{viewModel.article.urlToImage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/text_view_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:text="@{viewModel.article.source}"
            android:textAppearance="@style/TextAppearance.Fortnightly.Subtitles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_article"
            tools:text="FOX NEWS" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:text="@{viewModel.article.title}"
            android:textAppearance="@style/TextAppearance.Fortnightly.DetailsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_source"
            tools:text="This is a test title for the layout preview" />

        <TextView
            android:id="@+id/text_view_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:text="@{viewModel.article.content}"
            android:textAppearance="@style/TextAppearance.Fortnightly.Content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
            tools:text="@string/long_text_example" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>